# aws-params-desktop-ui

./: Cargo.toml  build.rs
src/: app.rs  bridge.rs  main.rs  state.rs
src/aws/: config.rs  mod.rs  params.rs  profiles.rs  secrets.rs
src/ui/: auth_panel.rs  common.rs  mod.rs  params_view.rs  secrets_view.rs  service_tabs.rs
