[package]
name = "aws-param-ui"
version = "1.1.0"
edition = "2021"

[dependencies]
# GUI
eframe = "0.31"
egui = "0.31"

# AWS SDK
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-ssm = "1"
aws-sdk-secretsmanager = "1"
aws-sdk-sts = "1"
aws-credential-types = { version = "1", features = ["hardcoded-credentials"] }
aws-types = "1"

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

# Misc
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rfd = "0.15"
dirs = "6"
configparser = "3"

[build-dependencies]
winres = "0.1"

[profile.release]
opt-level = "s"
lto = true
strip = true
